return highest score node as final answer

--- a/mcts.ipynb
+++ b/mcts.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,8 +332,17 @@
     "            # print(f\">>> Critique: {critique}\")\n",
     "            improved_answer = improve_answer(self.question, child_node.answer, critique)\n",
     "            child_node.answer = improved_answer\n",
-    "            print(f\">>> Improved answer: {improved_answer}\")\n",
+    "            print(f\">>> Improved answer:\\n{improved_answer}\")\n",
     "            self.add_child(child_node)\n",
+    "\n",
+    "    def highest_score_child(self) -> \"TreeNode\":\n",
+    "        if self.is_leaf():\n",
+    "            return self\n",
+    "\n",
+    "        best_sub_nodes = [self.highest_score_child(child) for child in self.children]\n",
+    "        best_sub_nodes.extend(self)\n",
+    "        best_sub_node = max(best_sub_nodes, key=lambda x: (x.value/x.visits) if x.visits > 0 else 0)\n",
+    "        return best_sub_node\n",
     "\n",
     "    def print_node(self):\n",
     "        print(f\">> Node {self.id}\")\n",
@@ -387,7 +396,10 @@
     "            self.backprop(candidate, rating)\n",
     "        print(\"-------DONE-------\")\n",
     "\n",
-    "        return self.root.most_visited_child()\n"
+    "        return self.highest_score_node()\n",
+    "\n",
+    "    def highest_score_node(self):\n",
+    "        return self.root.highest_score_child()\n"
    ]
   },
   {
@@ -396,10 +408,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = TreeSearch(\"How many R's are there in the word 'strawberry'?\").search()\n",
+    "question = \"A cube is cut into 27 smaller cubes by dividing each side into three equal parts. If one of the smaller cubes is removed from a corner, what is the total surface area of the remaining solid?\"\n",
+    "\n",
+    "mcts = TreeSearch(question)\n",
+    "result =mcts.search()\n",
     "\n",
     "print(result.answer)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
